--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -6,5 +6,11 @@ double "/Preferences/Pivot PID.mm.kd"=0
 double "/Preferences/Pivot PID.mm.kp"=0.638
 double "/Preferences/Pivot PID.mm.max_acceleration"=0
 double "/Preferences/Pivot PID.mm.max_velocity"=0
+double "/Preferences/Shooter Goal"=0
+double "/Preferences/Shooter PID.mm.kd"=0
+double "/Preferences/Shooter PID.mm.kff"=0.00015
+double "/Preferences/Shooter PID.mm.kp"=0.01
+double "/Preferences/Shooter PID.mm.max_acceleration"=0
+double "/Preferences/Shooter PID.mm.max_velocity"=0
 double "/Preferences/To XY Distance PID"=0.32
 double "/Preferences/To XY Turn PID"=0.785
