--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -14,3 +14,5 @@ double "/Preferences/Shooter PID.mm.max_acceleration"=0
 double "/Preferences/Shooter PID.mm.max_velocity"=0
 double "/Preferences/To XY Distance PID"=0.32
 double "/Preferences/To XY Turn PID"=0.785
+double "/Preferences/Tune Shooter Motor Speed"=0
+double "/Preferences/Tune Shooter RPM Goal"=0
