--- a/3rdParty_sb_widget_helper.gradle
+++ b/3rdParty_sb_widget_helper.gradle
@@ -1,7 +1,7 @@
 
 repositories {
     mavenLocal()
-    maven { url "http://raw.githubusercontent.com/pjreiniger/maven_repo/master" }
+    maven { url "https://raw.githubusercontent.com/pjreiniger/maven_repo/master" }
 }
 
 configurations {
