added shuffleboard communication to robot drawing

--- a/y2022/RapidReactDashboard/dashboard.yml
+++ b/y2022/RapidReactDashboard/dashboard.yml
@@ -20,6 +20,9 @@ widgets:
             name: intakeSpeed
             dasboard_constant: INTAKE_SPEED
           - type: double
+            name: rollerSpeed
+            dasboard_constant: ROLLER_SPEED
+          - type: double
             name: hangerSpeed
             dasboard_constant: HANGER_SPEED
           - type: double
