tested pathWeaver on simulator and tuned

--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -1,5 +1,11 @@
 [NetworkTables Storage 3.0]
 string "/Preferences/.type"="RobotPreferences"
+double "/Preferences/Chassis.mm.kd"=0
+double "/Preferences/Chassis.mm.kff"=0.137
+double "/Preferences/Chassis.mm.ki"=0
+double "/Preferences/Chassis.mm.kp"=0
+double "/Preferences/Chassis.mm.max_acceleration"=0.9144
+double "/Preferences/Chassis.mm.max_velocity"=1.8288
 double "/Preferences/DriveOffTarmacKP"=0.5
 double "/Preferences/Gravity Offset"=2.6
 double "/Preferences/Motor Speed"=0.5
