--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -13,6 +13,8 @@ double "/Preferences/Shooter PID.mm.kff"=0.00015
 double "/Preferences/Shooter PID.mm.kp"=0.01
 double "/Preferences/Shooter PID.mm.max_acceleration"=0
 double "/Preferences/Shooter PID.mm.max_velocity"=0
+double "/Preferences/To Hub Angle Turn PID"=0.6
+double "/Preferences/To Hub Distance PID"=0.2
 double "/Preferences/To XY Distance PID"=0.32
 double "/Preferences/To XY Turn PID"=0.785
 double "/Preferences/Tune Shooter Motor Speed"=0
