added pid for hanger

--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -2,6 +2,8 @@
 string "/Preferences/.type"="RobotPreferences"
 double "/Preferences/DriveOffTarmacKP"=0.5
 double "/Preferences/Gravity Offset"=2.6
+double "/Preferences/Hanger PID.mm.kd"=0
+double "/Preferences/Hanger PID.mm.kp"=0.5
 double "/Preferences/Motor Speed"=0.5
 double "/Preferences/Pivot PID.mm.kd"=0
 double "/Preferences/Pivot PID.mm.kp"=0.638
