--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,11 @@
 rootProject.name = 'GirlsOfSteelRobotics'
 
-include 'codelabs:basic_simulator'
-include 'codelabs:custom_shuffleboard'
-include 'codelabs:gitflow'
-include 'codelabs:pid'
-include 'codelabs:basic_java'
-include 'codelabs:first_robot_code'
+//include 'codelabs:basic_simulator'
+//include 'codelabs:custom_shuffleboard'
+//include 'codelabs:gitflow'
+//include 'codelabs:pid'
+//include 'codelabs:basic_java'
+//include 'codelabs:first_robot_code'
 
 include 'libraries:GirlsOfSteelLib'
 include 'libraries:GirlsOfSteelLibRev'
@@ -40,17 +40,16 @@ include 'libraries:GirlsOfSteelLibNavx'
 //include 'y2019:2019DeepSpace'
 //include 'y2019:OffenseBot'
 
-include 'y2020:2020InfiniteRecharge'
-include 'y2020:2020InfiniteRechargeDashboard'
-include 'y2020:Testboard'
-
-include 'y2021:OutreachBot'
-include 'y2021:OutreachBotDashboard'
-
-include 'y2022:CallistoRewrite'
-include 'y2022:ChassisProject'
+//include 'y2020:2020InfiniteRecharge'
+//include 'y2020:2020InfiniteRechargeDashboard'
+//include 'y2020:Testboard'
+//
+//include 'y2021:OutreachBot'
+//include 'y2021:OutreachBotDashboard'
+//
+//include 'y2022:CallistoRewrite'
+//include 'y2022:ChassisProject'
 
 include 'y2022:RapidReact'
 include 'y2022:RapidReactDashboard'
-findProject(':y2022:RapidReactDashboard')?.name = 'RapidReactDashboard'
 
