--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -1,5 +1,6 @@
 [NetworkTables Storage 3.0]
 string "/Preferences/.type"="RobotPreferences"
+double "/Preferences/Chassis Tune Velocity (ft/s)"=0
 double "/Preferences/Chassis.mm.kd"=0
 double "/Preferences/Chassis.mm.kff"=0.137
 double "/Preferences/Chassis.mm.ki"=0
