--- a/.github/workflows/bazel.yml
+++ b/.github/workflows/bazel.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         # TODO(PJ) Mac seems flakey on github. Turning it off for now
         # platform: [ubuntu-latest, macos-latest, windows-latest]
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
@@ -34,10 +34,28 @@ jobs:
       - name: Install Buildifier
         run: |
           cd $(mktemp -d)
-          GO111MODULE=on go get github.com/bazelbuild/buildtools/buildifier@4.0.1
+          GO111MODULE=on go get github.com/bazelbuild/buildtools/buildifier@5.0.1
+
+      - name: Install Unused Deps
+        run: |
+          cd $(mktemp -d)
+          GO111MODULE=on go get github.com/bazelbuild/buildtools/unused_deps@5.0.1
 
       - name: Run buildifier
         run: buildifier --lint=fix -r .
 
+      - name: Run unused deps
+        run: unused_deps //...
+
       - name: Check Output
         run: git --no-pager diff --exit-code HEAD
+
+      - name: Generate diff
+        run: git diff HEAD > bazel-lint-fixes.patch
+        if: ${{ failure() }}
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.platform }}-bazel-lint-fixes
+          path: bazel-lint-fixes.patch
+        if: ${{ failure() }}
