Update gradlerio files with our additions

--- a/old_robots/y2015/GoS2015/build.gradle
+++ b/old_robots/y2015/GoS2015/build.gradle
@@ -1,12 +1,12 @@
 plugins {
     id "java"
-    id "edu.wpi.first.GradleRIO" version "###GRADLERIOREPLACE###"
+    id "edu.wpi.first.GradleRIO" version "2022.4.1"
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
 
-def ROBOT_MAIN_CLASS = "###ROBOTCLASSREPLACE###"
+def ROBOT_MAIN_CLASS = "com.gos.recycle_rush.robot.Main"
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project DeployUtils.
@@ -85,3 +85,4 @@ jar {
 deployArtifact.jarTask = jar
 wpi.java.configureExecutableTasks(jar)
 wpi.java.configureTestTasks(test)
+
