--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -22,6 +22,8 @@ double "/Preferences/Shooter PID.mm.kff"=0.00015
 double "/Preferences/Shooter PID.mm.kp"=0.01
 double "/Preferences/Shooter PID.mm.max_acceleration"=0
 double "/Preferences/Shooter PID.mm.max_velocity"=0
+double "/Preferences/Sim Limelight Cargo X"=5
+double "/Preferences/Sim Limelight Cargo Y"=5
 double "/Preferences/To Hub Angle Turn PID"=0.6
 double "/Preferences/To Hub Distance PID"=0.2
 double "/Preferences/To XY Distance PID"=0.32
