--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -13,6 +13,7 @@ double "/Preferences/Hanger PID.mm.kd"=0
 double "/Preferences/Hanger PID.mm.kp"=0.5
 double "/Preferences/Motor Speed"=0.5
 double "/Preferences/Pivot PID.mm.kd"=0
+double "/Preferences/Pivot PID.mm.kff"=0
 double "/Preferences/Pivot PID.mm.kp"=0.638
 double "/Preferences/Pivot PID.mm.max_acceleration"=0
 double "/Preferences/Pivot PID.mm.max_velocity"=0
