--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,11 @@
 rootProject.name = 'GirlsOfSteelRobotics'
 
-//include 'codelabs:basic_simulator'
-//include 'codelabs:custom_shuffleboard'
-//include 'codelabs:gitflow'
-//include 'codelabs:pid'
-//include 'codelabs:basic_java'
-//include 'codelabs:first_robot_code'
+include 'codelabs:basic_simulator'
+include 'codelabs:custom_shuffleboard'
+include 'codelabs:gitflow'
+include 'codelabs:pid'
+include 'codelabs:basic_java'
+include 'codelabs:first_robot_code'
 
 include 'libraries:GirlsOfSteelLib'
 include 'libraries:GirlsOfSteelLibRev'
@@ -16,39 +16,39 @@ include 'libraries:GirlsOfSteelLibNavx'
 //include 'old_robots:y2011:GOS2011:MyRobot_otherschool'
 //include 'old_robots:y2011:GOS2011:robolatest'
 
-//include 'old_robots:y2012:Watson2012'
-//
-//include 'old_robots:y2013:Eve2013'
-//
-//include 'old_robots:y2014:GOS2014'
-//
-//include 'old_robots:y2015:GoS2015'
-//
-//include 'old_robots:y2016:Neohuman_Assassination_Golem'
-//include 'old_robots:y2016:OutreachBot'
-//include 'old_robots:y2016:TeamFBI_EOPP'
-//include 'old_robots:y2016:TeamSquirtle'
-//
-//include 'old_robots:y2017:Secondary_Human_Training_Golem'
-//include 'old_robots:y2017:Team1'
-//include 'old_robots:y2017:Team_2'
-//
-//
-//include 'y2018:2018Beta'
-//include 'y2018:2018PowerUp'
-//
-//include 'y2019:2019DeepSpace'
-//include 'y2019:OffenseBot'
+include 'old_robots:y2012:Watson2012'
 
-//include 'y2020:2020InfiniteRecharge'
-//include 'y2020:2020InfiniteRechargeDashboard'
-//include 'y2020:Testboard'
-//
-//include 'y2021:OutreachBot'
-//include 'y2021:OutreachBotDashboard'
-//
-//include 'y2022:CallistoRewrite'
-//include 'y2022:ChassisProject'
+include 'old_robots:y2013:Eve2013'
+
+include 'old_robots:y2014:GOS2014'
+
+include 'old_robots:y2015:GoS2015'
+
+include 'old_robots:y2016:Neohuman_Assassination_Golem'
+include 'old_robots:y2016:OutreachBot'
+include 'old_robots:y2016:TeamFBI_EOPP'
+include 'old_robots:y2016:TeamSquirtle'
+
+include 'old_robots:y2017:Secondary_Human_Training_Golem'
+include 'old_robots:y2017:Team1'
+include 'old_robots:y2017:Team_2'
+
+
+include 'y2018:2018Beta'
+include 'y2018:2018PowerUp'
+
+include 'y2019:2019DeepSpace'
+include 'y2019:OffenseBot'
+
+include 'y2020:2020InfiniteRecharge'
+include 'y2020:2020InfiniteRechargeDashboard'
+include 'y2020:Testboard'
+
+include 'y2021:OutreachBot'
+include 'y2021:OutreachBotDashboard'
+
+include 'y2022:CallistoRewrite'
+include 'y2022:ChassisProject'
 
 include 'y2022:RapidReact'
 include 'y2022:RapidReactDashboard'
