--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -12,6 +12,7 @@ double "/Preferences/Gravity Offset"=2.6
 double "/Preferences/Hanger PID.mm.kd"=0
 double "/Preferences/Hanger PID.mm.kp"=0.5
 double "/Preferences/Motor Speed"=0.5
+double "/Preferences/OpenLoopRampRate"=0.5
 double "/Preferences/Pivot PID.mm.kd"=0
 double "/Preferences/Pivot PID.mm.kff"=0
 double "/Preferences/Pivot PID.mm.kp"=0.638
@@ -25,6 +26,7 @@ double "/Preferences/Shooter PID.mm.max_acceleration"=0
 double "/Preferences/Shooter PID.mm.max_velocity"=0
 double "/Preferences/Sim Limelight Cargo X"=5
 double "/Preferences/Sim Limelight Cargo Y"=5
+double "/Preferences/TeleDriveSlowMult"=0.5
 double "/Preferences/To Hub Angle Turn PID"=0.6
 double "/Preferences/To Hub Distance PID"=0.2
 double "/Preferences/To XY Distance PID"=0.32
