--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -1,14 +1,22 @@
 [NetworkTables Storage 3.0]
 string "/Preferences/.type"="RobotPreferences"
 double "/Preferences/Chassis Tune Velocity (ft/s)"=0
+double "/Preferences/Chassis to cargo.mm.kd"=0
+double "/Preferences/Chassis to cargo.mm.kp"=0
 double "/Preferences/Chassis.mm.kd"=0
 double "/Preferences/Chassis.mm.kff"=0.137
 double "/Preferences/Chassis.mm.ki"=0
 double "/Preferences/Chassis.mm.kp"=0
 double "/Preferences/Chassis.mm.max_acceleration"=0.9144
 double "/Preferences/Chassis.mm.max_velocity"=1.8288
+double "/Preferences/Collector.mm.kd"=0
+double "/Preferences/Collector.mm.kff"=0.01
+double "/Preferences/Collector.mm.ki"=0
+double "/Preferences/Collector.mm.kp"=0
+double "/Preferences/Collector.mm.max_acceleration"=100
+double "/Preferences/Collector.mm.max_velocity"=50
 double "/Preferences/DriveOffTarmacKP"=0.5
-double "/Preferences/Gravity Offset"=2.6
+double "/Preferences/Gravity Offset"=0
 double "/Preferences/Hanger PID.mm.kd"=0
 double "/Preferences/Hanger PID.mm.kp"=0.5
 double "/Preferences/Motor Speed"=0.5
@@ -29,7 +37,9 @@ double "/Preferences/Sim Limelight Cargo Y"=5
 double "/Preferences/TeleDriveSlowMult"=0.5
 double "/Preferences/To Hub Angle Turn PID"=0.6
 double "/Preferences/To Hub Distance PID"=0.2
+double "/Preferences/To XY Dist Speed"=0
 double "/Preferences/To XY Distance PID"=0.32
+double "/Preferences/To XY Max Dist"=4
 double "/Preferences/To XY Turn PID"=0.785
 double "/Preferences/Tune Shooter Motor Speed"=0
 double "/Preferences/Tune Shooter RPM Goal"=0
