Mess with trajectories

--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -1,6 +1,10 @@
 [NetworkTables Storage 3.0]
 string "/Preferences/.type"="RobotPreferences"
+double "/Preferences/Chassis Tune Acceleration"=0
 double "/Preferences/Chassis Tune Velocity (ft/s)"=0
+double "/Preferences/Chassis to angle.mm.kd"=0
+double "/Preferences/Chassis to angle.mm.ki"=0
+double "/Preferences/Chassis to angle.mm.kp"=0.1
 double "/Preferences/Chassis to cargo.mm.kd"=0
 double "/Preferences/Chassis to cargo.mm.kp"=0
 double "/Preferences/Chassis.mm.kd"=0
