calibration for gpr field

--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -39,6 +39,7 @@ double "/Preferences/Shooter PID.mm.max_velocity"=0
 double "/Preferences/Sim Limelight Cargo X"=5
 double "/Preferences/Sim Limelight Cargo Y"=5
 double "/Preferences/TeleDriveSlowMult"=0.5
+double "/Preferences/TeleTurnScaling"=0.8
 double "/Preferences/To Hub Angle Turn PID"=0.6
 double "/Preferences/To Hub Distance PID"=0.2
 double "/Preferences/To XY Dist Speed"=0
