Cleaning up some stuff

--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -1,10 +1,11 @@
 [NetworkTables Storage 3.0]
 string "/Preferences/.type"="RobotPreferences"
+double "/Preferences/Allowable Shoot Angle Error"=2
 double "/Preferences/Chassis Tune Acceleration"=0
 double "/Preferences/Chassis Tune Velocity (ft/s)"=0
 double "/Preferences/Chassis to angle.mm.kd"=0
 double "/Preferences/Chassis to angle.mm.ki"=0
-double "/Preferences/Chassis to angle.mm.kp"=0.1
+double "/Preferences/Chassis to angle.mm.kp"=0
 double "/Preferences/Chassis to cargo.mm.kd"=0
 double "/Preferences/Chassis to cargo.mm.kp"=0
 double "/Preferences/Chassis.mm.kd"=0
@@ -16,19 +17,21 @@ double "/Preferences/Chassis.mm.max_velocity"=1.8288
 double "/Preferences/Collector.mm.kd"=0
 double "/Preferences/Collector.mm.kff"=0.01
 double "/Preferences/Collector.mm.ki"=0
-double "/Preferences/Collector.mm.kp"=0
+double "/Preferences/Collector.mm.kp"=0.1
 double "/Preferences/Collector.mm.max_acceleration"=100
 double "/Preferences/Collector.mm.max_velocity"=50
 double "/Preferences/DriveOffTarmacKP"=0.5
 double "/Preferences/Gravity Offset"=0
 double "/Preferences/Hanger PID.mm.kd"=0
 double "/Preferences/Hanger PID.mm.kp"=0.5
+double "/Preferences/Max Shoot Dist"=5
+double "/Preferences/Min Shoot Dist"=2
 double "/Preferences/Motor Speed"=0.5
 double "/Preferences/OpenLoopRampRate"=0.5
 double "/Preferences/Pivot PID.mm.kd"=0
 double "/Preferences/Pivot PID.mm.kff"=0
 double "/Preferences/Pivot PID.mm.kp"=0.638
-double "/Preferences/Pivot PID.mm.max_acceleration"=0
+double "/Preferences/Pivot PID.mm.max_acceleration"=120
 double "/Preferences/Pivot PID.mm.max_velocity"=0
 double "/Preferences/Shooter Goal"=0
 double "/Preferences/Shooter PID.mm.kd"=0
