Pre 50 (pj says so)

--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -33,6 +33,9 @@ double "/Preferences/Pivot PID.mm.kff"=0
 double "/Preferences/Pivot PID.mm.kp"=0.638
 double "/Preferences/Pivot PID.mm.max_acceleration"=120
 double "/Preferences/Pivot PID.mm.max_velocity"=0
+double "/Preferences/Roller PID.mm.kd"=0
+double "/Preferences/Roller PID.mm.kff"=0
+double "/Preferences/Roller PID.mm.kp"=0
 double "/Preferences/Shooter Goal"=0
 double "/Preferences/Shooter PID.mm.kd"=0
 double "/Preferences/Shooter PID.mm.kff"=0.00015
