--- a/y2022/RapidReact/.gitignore
+++ b/y2022/RapidReact/.gitignore
@@ -213,7 +213,8 @@ replay_pid*
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -328,3 +329,4 @@ bin/
 
 # End entries from WPI Lib team
 
+/datalogs
