end of thursday

--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -20,8 +20,9 @@ double "/Preferences/Collector.mm.ki"=0
 double "/Preferences/Collector.mm.kp"=0.1
 double "/Preferences/Collector.mm.max_acceleration"=100
 double "/Preferences/Collector.mm.max_velocity"=50
+double "/Preferences/Decrease Rpm"=0
 double "/Preferences/DriveOffTarmacKP"=0.5
-double "/Preferences/Gravity Offset"=0
+double "/Preferences/Gravity Offset"=-0.1
 double "/Preferences/Hanger PID.mm.kd"=0
 double "/Preferences/Hanger PID.mm.kp"=0.5
 double "/Preferences/Max Shoot Dist"=5
