--- a/y2022/RapidReact/robot_preferences/networktables.ini
+++ b/y2022/RapidReact/robot_preferences/networktables.ini
@@ -20,6 +20,7 @@ double "/Preferences/Collector.mm.ki"=0
 double "/Preferences/Collector.mm.kp"=0
 double "/Preferences/Collector.mm.max_acceleration"=300
 double "/Preferences/Collector.mm.max_velocity"=144
+double "/Preferences/Decrease Rpm"=50
 double "/Preferences/DriveOffTarmacKP"=0.5
 double "/Preferences/Gravity Offset"=0.1
 double "/Preferences/Hanger PID.mm.kd"=0
@@ -44,7 +45,7 @@ double "/Preferences/Pivot PID.mm.max_acceleration"=130
 double "/Preferences/Pivot PID.mm.max_velocity"=50
 double "/Preferences/Roller PID.mm.kd"=0
 double "/Preferences/Roller PID.mm.kff"=0.00018
-double "/Preferences/Roller PID.mm.kp"=0.0001
+double "/Preferences/Roller PID.mm.kp"=9e-05
 double "/Preferences/Shooter PID.mm.kd"=0
 double "/Preferences/Shooter PID.mm.kff"=0.00018
 double "/Preferences/Shooter PID.mm.kp"=0.0005
@@ -52,10 +53,10 @@ double "/Preferences/TeleDriveSlowMult"=0.5
 double "/Preferences/TeleTurnScaling"=0.7
 double "/Preferences/To Hub Angle Turn PID"=0
 double "/Preferences/To Hub Distance PID"=0
-double "/Preferences/To XY Dist Speed"=0.6
+double "/Preferences/To XY Dist Speed"=0.7
 double "/Preferences/To XY Distance PID"=0
-double "/Preferences/To XY Max Dist"=4
+double "/Preferences/To XY Max Dist"=10
 double "/Preferences/To XY Turn PID"=0
 double "/Preferences/Tune Shooter Motor Speed"=0.5
-double "/Preferences/Tune Shooter RPM Goal"=1800
+double "/Preferences/Tune Shooter RPM Goal"=2400
 double "/Preferences/XXXX"=1
