--- a/y2022/RapidReact/networktables.ini
+++ b/y2022/RapidReact/networktables.ini
@@ -6,7 +6,7 @@ double "/Preferences/Chassis Tune Velocity (ft/s)"=0
 double "/Preferences/Chassis to angle.mm.kd"=0
 double "/Preferences/Chassis to angle.mm.ki"=0
 double "/Preferences/Chassis to angle.mm.kp"=1e-07
-double "/Preferences/Chassis to cargo.mm.kd"=0
+double "/Preferences/Chassis to cargo.mm.kd"=1
 double "/Preferences/Chassis to cargo.mm.kp"=0
 double "/Preferences/Chassis.mm.kd"=0
 double "/Preferences/Chassis.mm.kff"=0.137
@@ -20,8 +20,9 @@ double "/Preferences/Collector.mm.ki"=0
 double "/Preferences/Collector.mm.kp"=0.1
 double "/Preferences/Collector.mm.max_acceleration"=100
 double "/Preferences/Collector.mm.max_velocity"=50
+double "/Preferences/Decrease Rpm"=0
 double "/Preferences/DriveOffTarmacKP"=0.5
-double "/Preferences/Gravity Offset"=0
+double "/Preferences/Gravity Offset"=-0.1
 double "/Preferences/Hanger PID.mm.kd"=0
 double "/Preferences/Hanger PID.mm.kp"=0.5
 double "/Preferences/Max Shoot Dist"=5
