Update bazel scripts (#8)
* Update bazel scripts

* Fixup

--- a/.github/workflows/bazel.yml
+++ b/.github/workflows/bazel.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: bazel build //... -k --config=remote
+        run: bazel test //... -k --config=remote
 
 
   buildifier:
@@ -41,7 +41,7 @@ jobs:
           GO111MODULE=on go get github.com/bazelbuild/buildtools/buildifier@5.0.1
 
       - name: Run buildifier
-        run: buildifier --lint=fix -r .
+        run: buildifier -warnings all --lint=fix -r .
 
       - name: Check Output
         run: git --no-pager diff --exit-code HEAD
