west coast drive chassis

--- a/settings.gradle
+++ b/settings.gradle
@@ -53,3 +53,5 @@ include 'libraries:GirlsOfSteelLibNavx'
 include 'y2022:RapidReact'
 include 'y2022:RapidReactDashboard'
 
+include 'y2022:SCRAWestCoastDrive'
+
