More small libs (#10)
* PID codelab

* simulator codelab

* 2017 robot

* 2016 robot

* 2012

* 2022

* Fix build, buildifer

* Fix unused deps

* Fix checkstyle

--- a/.github/workflows/bazel.yml
+++ b/.github/workflows/bazel.yml
@@ -71,18 +71,18 @@ jobs:
       - name: Install Unused Deps
         run: |
           cd $(mktemp -d)
-          GO111MODULE=on go get github.com/bazelbuild/buildtools/unused_deps@5.0.1
+          GO111MODULE=on go get github.com/bazelbuild/buildtools/unused_deps@5.1.0
 
       - name: Install Buildozer
         run: |
           cd $(mktemp -d)
-          GO111MODULE=on go get github.com/bazelbuild/buildtools/buildozer@5.0.1
+          GO111MODULE=on go get github.com/bazelbuild/buildtools/buildozer@5.1.0
 
       - name: Prep unused deps
         run:  bazel query --tool_tag=unused_deps --keep_going "kind('(kt|java|android)_*', //...)" && bazel build --tool_tag=unused_deps --keep_going //... --config=remote
 
       - name: Run unused deps
-        run: unused_deps //... > buildozer-cmds.sh
+        run: unused_deps -cquery //... > buildozer-cmds.sh
 
       - name: Show unused deps
         run: cat buildozer-cmds.sh
