--- a/old_robots/y2016/Neohuman_Assassination_Golem/BUILD.bazel
+++ b/old_robots/y2016/Neohuman_Assassination_Golem/BUILD.bazel
@@ -1,13 +1,4 @@
-load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")
-
-gos_java_robot(
+alias(
     name = "Neohuman_Assassination_Golem",
-    srcs = glob(["src/main/java/**/*.java"]),
-    disable_checkstyle = True,
-    main_class = "com.gos.stronghold.robot.Main",
-    deps = [
-        "@bazelrio//libraries/java/ctre/phoenix",
-        "@bazelrio//libraries/java/wpilib/new_commands",
-        "@bazelrio//libraries/java/wpilib/wpilibj",
-    ],
+    actual = "//old_robots/y2016/Neohuman_Assassination_Golem/src/main/java/com/gos/stronghold/robot",
 )
