--- a/y2022/RapidReact/BUILD.bazel
+++ b/y2022/RapidReact/BUILD.bazel
@@ -1,20 +1,4 @@
-load("//build_scripts/bazel:java_rules.bzl", "gos_java_robot")
-
-gos_java_robot(
+alias(
     name = "RapidReact",
-    srcs = glob(["src/main/java/**/*.java"]),
-    data = glob(["src/main/deploy/**"]),
-    main_class = "com.gos.rapidreact.Main",
-    deps = [
-        "//libraries/GirlsOfSteelLib",
-        "//libraries/GirlsOfSteelLibRev",
-        "@bazelrio//libraries/java/ctre/phoenix",
-        "@bazelrio//libraries/java/rev/revlib",
-        "@bazelrio//libraries/java/wpilib/new_commands",
-        "@bazelrio//libraries/java/wpilib/ntcore",
-        "@bazelrio//libraries/java/wpilib/wpilibj",
-        "@bazelrio//libraries/java/wpilib/wpimath",
-        "@bazelrio//libraries/java/wpilib/wpiutil",
-        "@snobot_sim//jar",
-    ],
+    actual = "//y2022/RapidReact/src/main/java/com/gos/rapidreact",
 )
