--- a/old_robots/y2017/Secondary_Human_Training_Golem/src/main/java/com/gos/steam_works/BUILD.bazel
+++ b/old_robots/y2017/Secondary_Human_Training_Golem/src/main/java/com/gos/steam_works/BUILD.bazel
@@ -21,12 +21,13 @@ gos_java_library(
 
 gos_java_robot(
     name = "steam_works",
-    srcs = glob(["**/*.java"]),
+    srcs = glob(["*.java"]),
     main_class = "com.gos.steam_works.Main",
     visibility = ["//old_robots/y2017/Secondary_Human_Training_Golem:__subpackages__"],
     deps = [
+        "//old_robots/y2017/Secondary_Human_Training_Golem/src/main/java/com/gos/steam_works/commands",
+        "//old_robots/y2017/Secondary_Human_Training_Golem/src/main/java/com/gos/steam_works/commands/autonomous",
         "//old_robots/y2017/Secondary_Human_Training_Golem/src/main/java/com/gos/steam_works/subsystems",
-        "@bazelrio//libraries/java/ctre/phoenix",
         "@bazelrio//libraries/java/opencv",
         "@bazelrio//libraries/java/wpilib/cameraserver",
         "@bazelrio//libraries/java/wpilib/new_commands",
