--- a/libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/led/BUILD.bazel
+++ b/libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/led/BUILD.bazel
@@ -1,11 +1,10 @@
 load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 
 gos_java_library(
-    name = "mirrored",
+    name = "led",
     srcs = glob(["*.java"]),
-    visibility = ["//y2022/RapidReact:__subpackages__"],
+    visibility = ["//visibility:public"],
     deps = [
-        "//y2022/RapidReact/src/main/java/com/gos/rapidreact/led",
         "@bazelrio//libraries/java/wpilib/wpilibj",
         "@snobot_sim//jar",
     ],
