--- a/libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/led/mirrored/BUILD.bazel
+++ b/libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/led/mirrored/BUILD.bazel
@@ -1,10 +1,11 @@
 load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 
 gos_java_library(
-    name = "led",
+    name = "mirrored",
     srcs = glob(["*.java"]),
-    visibility = ["//y2022/RapidReact:__subpackages__"],
+    visibility = ["//visibility:public"],
     deps = [
+        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/led",
         "@bazelrio//libraries/java/wpilib/wpilibj",
         "@snobot_sim//jar",
     ],
