Update buildbuddy files from their documentation (#12)
* Update buildbuddy files from their documentation

* Try again

* Try again

* Try again

* Debug

* Remove duplicated deps

* lint

* Fix cache pollution fixup

* Revert build changes

* Try no workspace

* Try again

* Try again

--- a/.github/workflows/bazel.yml
+++ b/.github/workflows/bazel.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: bazel test //... -k --config=remote
+        run: bazel test //... -k --config=remote --config=ci
 
 
   buildifier:
