--- a/old_robots/y2018/2018PowerUp/src/main/java/com/gos/power_up/BUILD.bazel
+++ b/old_robots/y2018/2018PowerUp/src/main/java/com/gos/power_up/BUILD.bazel
@@ -33,15 +33,24 @@ gos_java_library(
 
 gos_java_robot(
     name = "power_up",
-    srcs = glob(["*.java"]),
+    srcs = glob(
+        ["*.java"],
+        exclude = [
+            "RobotMap.java",
+            "GameData.java",
+            "Blob.java",
+            "Blobs.java",
+            "Pipeline.java",
+            "PipelineListener.java",
+        ],
+    ),
     main_class = "com.gos.power_up.Main",
     visibility = ["//old_robots/y2018/2018PowerUp:__subpackages__"],
     deps = [
+        ":GameData",
         "//old_robots/y2018/2018PowerUp/src/main/java/com/gos/power_up/commands",
         "//old_robots/y2018/2018PowerUp/src/main/java/com/gos/power_up/commands/autonomous",
         "//old_robots/y2018/2018PowerUp/src/main/java/com/gos/power_up/subsystems",
-        "@bazelrio//libraries/java/opencv",
-        "@bazelrio//libraries/java/wpilib/cameraserver",
         "@bazelrio//libraries/java/wpilib/new_commands",
         "@bazelrio//libraries/java/wpilib/wpilibj",
     ],
