--- a/old_robots/y2019/OffenseBot/src/main/java/com/gos/offense2019/BUILD.bazel
+++ b/old_robots/y2019/OffenseBot/src/main/java/com/gos/offense2019/BUILD.bazel
@@ -8,7 +8,10 @@ gos_java_library(
 
 gos_java_robot(
     name = "offense2019",
-    srcs = glob(["*.java"]),
+    srcs = glob(
+        ["*.java"],
+        exclude = ["RobotMap.java"],
+    ),
     main_class = "com.gos.offense2019.Main",
     visibility = ["//old_robots/y2019/OffenseBot:__subpackages__"],
     deps = [
