--- a/codelabs/basic_simulator/src/main/java/com/gos/codelabs/basic_simulator/BUILD.bazel
+++ b/codelabs/basic_simulator/src/main/java/com/gos/codelabs/basic_simulator/BUILD.bazel
@@ -19,7 +19,13 @@ gos_java_library(
 
 gos_java_robot(
     name = "basic_simulator",
-    srcs = glob(["*.java"]),
+    srcs = glob(
+        ["*.java"],
+        exclude = [
+            "SmartDashboardNames.java",
+            "Constants.java",
+        ],
+    ),
     disable_pmd = True,
     main_class = "com.gos.codelabs.basic_simulator.Main",
     visibility = ["//codelabs/basic_simulator:__subpackages__"],
@@ -29,6 +35,5 @@ gos_java_robot(
         "//codelabs/basic_simulator/src/main/java/com/gos/codelabs/basic_simulator/subsystems",
         "@bazelrio//libraries/java/wpilib/new_commands",
         "@bazelrio//libraries/java/wpilib/wpilibj",
-        "@bazelrio//libraries/java/wpilib/wpimath",
     ],
 )
