--- a/old_robots/y2016/OutreachBot/src/main/java/com/gos/outreach2016/robot/BUILD.bazel
+++ b/old_robots/y2016/OutreachBot/src/main/java/com/gos/outreach2016/robot/BUILD.bazel
@@ -8,7 +8,10 @@ gos_java_library(
 
 gos_java_robot(
     name = "robot",
-    srcs = glob(["*.java"]),
+    srcs = glob(
+        ["*.java"],
+        exclude = ["RobotMap.java"],
+    ),
     main_class = "com.gos.outreach2016.robot.Main",
     visibility = ["//old_robots/y2016/OutreachBot:__subpackages__"],
     deps = [
