--- a/old_robots/y2016/TeamFBI_EOPP/src/main/java/com/gos/preseason2016/team_fbi/robot/BUILD.bazel
+++ b/old_robots/y2016/TeamFBI_EOPP/src/main/java/com/gos/preseason2016/team_fbi/robot/BUILD.bazel
@@ -8,10 +8,14 @@ gos_java_library(
 
 gos_java_robot(
     name = "robot",
-    srcs = glob(["*.java"]),
+    srcs = glob(
+        ["*.java"],
+        exclude = ["RobotMap.java"],
+    ),
     main_class = "com.gos.preseason2016.team_fbi.robot.Main",
     visibility = ["//old_robots/y2016/TeamFBI_EOPP:__subpackages__"],
     deps = [
+        ":RobotMap",
         "//old_robots/y2016/TeamFBI_EOPP/src/main/java/com/gos/preseason2016/team_fbi/robot/commands",
         "//old_robots/y2016/TeamFBI_EOPP/src/main/java/com/gos/preseason2016/team_fbi/robot/subsystems",
         "@bazelrio//libraries/java/wpilib/new_commands",
