--- a/old_robots/y2017/Team1/src/main/java/com/gos/preseason2017/team1/robot/BUILD.bazel
+++ b/old_robots/y2017/Team1/src/main/java/com/gos/preseason2017/team1/robot/BUILD.bazel
@@ -8,7 +8,10 @@ gos_java_library(
 
 gos_java_robot(
     name = "robot",
-    srcs = glob(["*.java"]),
+    srcs = glob(
+        ["*.java"],
+        exclude = ["RobotMap.java"],
+    ),
     main_class = "com.gos.preseason2017.team1.robot.Main",
     visibility = ["//old_robots/y2017/Team1:__subpackages__"],
     deps = [
