--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,6 +7,13 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+
+  lint_python:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: psf/black@stable
+
   lint_versions:
     strategy:
       fail-fast: false
