--- a/libraries/GirlsOfSteelLib/BUILD.bazel
+++ b/libraries/GirlsOfSteelLib/BUILD.bazel
@@ -1,8 +1,8 @@
 load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 
 gos_java_library(
-    name = "GirlsOfSteelLib",
-    srcs = glob(["src/main/java/**/*.java"]),
+    name = "future_wpilib",
+    srcs = glob(["src/main/java/edu/wpi/first/**/*.java"]),
     visibility = ["//visibility:public"],
     deps = [
         "@bazelrio//libraries/java/wpilib/wpilibj",
