--- a/libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/sensors/BUILD.bazel
+++ b/libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/sensors/BUILD.bazel
@@ -1,11 +1,13 @@
 load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 
 gos_java_library(
-    name = "mirrored",
+    name = "sensors",
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
     deps = [
-        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/led",
+        "//libraries/GirlsOfSteelLib:future_wpilib",
+        "@bazelrio//libraries/java/wpilib/ntcore",
         "@bazelrio//libraries/java/wpilib/wpilibj",
+        "@bazelrio//libraries/java/wpilib/wpimath",
     ],
 )
