--- a/libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/BUILD.bazel
+++ b/libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/BUILD.bazel
@@ -1,11 +1,11 @@
 load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 
 gos_java_library(
-    name = "GirlsOfSteelLibRev",
-    srcs = glob(["src/main/java/**/*.java"]),
+    name = "rev",
+    srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
     deps = [
-        "//libraries/GirlsOfSteelLib",
+        "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties",
         "@bazelrio//libraries/java/rev/revlib",
     ],
 )
