--- a/libraries/GirlsOfSteelLib/BUILD.bazel
+++ b/libraries/GirlsOfSteelLib/BUILD.bazel
@@ -4,8 +4,5 @@ gos_java_library(
     name = "future_wpilib",
     srcs = glob(["src/main/java/edu/wpi/first/**/*.java"]),
     visibility = ["//visibility:public"],
-    deps = [
-        "@bazelrio//libraries/java/wpilib/wpilibj",
-        "@bazelrio//libraries/java/wpilib/wpimath",
-    ],
+    deps = ["@bazelrio//libraries/java/wpilib/wpimath"],
 )
