--- a/libraries/GirlsOfSteelLibCtre/build.gradle
+++ b/libraries/GirlsOfSteelLibCtre/build.gradle
@@ -12,3 +12,8 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+
+ext.groupId = "com.gos.lib.ctre"
+apply from: "${rootDir}/build_scripts/gradle/publish_java.gradle"
+
