--- a/libraries/GirlsOfSteelLib/build.gradle
+++ b/libraries/GirlsOfSteelLib/build.gradle
@@ -11,3 +11,7 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+
+ext.groupId = "com.gos.lib"
+apply from: "${rootDir}/build_scripts/gradle/publish_java.gradle"
