--- a/settings.gradle
+++ b/settings.gradle
@@ -9,7 +9,7 @@ rootProject.name = 'GirlsOfSteelRobotics'
 
 include 'libraries:GirlsOfSteelLib'
 include 'libraries:GirlsOfSteelLibRev'
-//include 'libraries:GirlsOfSteelLibCtre'
+include 'libraries:GirlsOfSteelLibCtre'
 
 //include 'old_robots:y2011:GOS2011:Drive'
 //include 'old_robots:y2011:GOS2011:MyRobot_otherschool'
